# my-next-awesome-project

./: .bumpversion.cfg  README.md  pyproject.toml
.github/workflows/: lint.yaml  pytest.yaml  release.yaml
