[tool.poetry]
name = "wabalabadubdub"
version = "0.1.0"
description = ""
authors = ["laixintao <laixintaoo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.scripts]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"
bumpversion = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
